--- a/docs/stat566/fe_stat566_bak.tex
+++ b/docs/stat566/fe_stat566_bak.tex
@@ -728,7 +728,7 @@ numerical summaries for each factor level and their combinations.
 \begin{table}[H]
 \centering\begingroup\fontsize{8}{10}\selectfont
 
-\begin{tabular}{lrr>{\columncolor[HTML]{EAFAF1}}rrrrrrr}
+\begin{tabular}{lrrrrr>{\columncolor[HTML]{EAFAF1}}rrrr}
 \toprule
 Source & min & Q1 & median & Q3 & max & mean & sd & n & missing\\
 \midrule
