--- a/static/usp570/note_usp570.Rmd
+++ b/static/usp570/note_usp570.Rmd
@@ -18,7 +18,7 @@ options(repos="https://cran.rstudio.com")
 Link to The Transportation Planning Process
 https://www.planning.dot.gov/documents/briefingbook/bbook_07.pdf
 
-## A case study of integrating transportation and land use
+## Case study
 
 Some basics about the existing land use and transportation, e.g. population size, density, land area, transit infrastructure/system, etc. 
 
@@ -32,7 +32,7 @@ Any innovative approaches or success stories for integrating transportation and 
 
 https://docs.google.com/spreadsheets/d/1G83Ar37TttNj6MD6Hj13-2HMaXgjqvQwauKjrYWlqDU/
 
-# Policy Memos
+## Policy Memos
 
  - Anti-displacement strategies. 
 
