--- a/docs/stat561/note_stat561.Rmd
+++ b/docs/stat561/note_stat561.Rmd
@@ -2,7 +2,14 @@
 title: "Mathematical Statistics I"
 subtitle: "STAT 561"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
-output: html_document
+output:
+  rmdformats::html_clean:
+    fig_width: 6
+    fig_height: 6
+    highlight: kate
+    thumbnails: true
+    lightbox: true
+    gallery: true
 ---
 
 
