--- a/static/stat561/note_stat561.Rmd
+++ b/static/stat561/note_stat561.Rmd
@@ -3,13 +3,8 @@ title: "Mathematical Statistics I"
 subtitle: "STAT 561"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
-  rmdformats::html_docco:
-    fig_width: 6
-    fig_height: 6
-    highlight: kate
-    thumbnails: true
-    lightbox: true
-    gallery: true
+  tufte::tufte_html:
+    tufte_features: ["fonts", "background", "italics"]
 ---
 
 
